force-app/src/objects/EventApi__Event_Chatter_Groups__c.object
<CustomObject>
    <fields>
        <fullName>EventApi__Collaboration_Group_Id__c</fullName>
        <description>Collaboration Group ID</description>
        <inlineHelpText>Collaboration Group Id</inlineHelpText>
        <label>Collaboration Group Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Event</description>
        <inlineHelpText>Look up to Event</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Event Chatter Groups</relationshipLabel>
        <relationshipName>Event_Chatter_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Group_Id__c</fullName>
        <description>Group ID</description>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Group ID</inlineHelpText>
        <label>Group Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EventApi__Group_Name__c</fullName>
        <description>Group Name</description>
        <inlineHelpText>Group Name</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Chatter Groups</label>
    <nameField>
        <displayFormat>ECR-{00000000}</displayFormat>
        <label>Event Chatter Groups Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Chatter Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>